--- a/VRChat/24/1111224.html
+++ b/VRChat/24/1111224.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "r2U7r4U5C/R+oDmDL7MCKo5sDYNZj6u5/Q3o44yryg8="></script>
+    "fK7wfAtLAdS3DpPCkTKaNLOen6naEahhqccg9KU5VPk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"亜久涼子(アクリョーコ) / Ryoko Aku - オリジナル3Dモデル【VRChat (PC \u0026 Quest) / VRM】","description":"『霊生を謳歌する悪霊』がコンセプトのオリジナル3Dモデルです。\nVRMファイル付き！\n\n☑obakeムーブとは: https://twitter.com/NamaeWatashino/status/1092789099650404353\n\n\n╋─━─━─━─━─━─━─━─━─━─━─╋\n　⚠ v4.x.x へのアップデート前に ⚠\nプロジェクト内の『RyokoAku』フォルダ以下を\nプロジェクト外へ退避させて(削除して)ください。\n╋─━─━─━─━─━─━─━─━─━─━─╋\n\n\n・VRChatアバター向けセットアップ済\nAvatars 3.0準拠、Avatar Dynamics(PhysBones)設定済みでVRChatアバターとしてすぐに使えます。\n\n・lilToon使用\nVRChatに最適化された高い表現力を持つ人気シェーダーlilToonを使用しています。\n（※事前にシェーダーをプロジェクト内へインポートしてください。）\nlilToon - https://booth.pm/ja/items/3087170\n\n・VRMファイル付属\nclusterやバーチャルキャスト、DMM Connect Chat等でのアバター利用、その他VRM対応アプリで読み込めます。\n\n・一般的なUnityアセット使用を想定したPrefabを同梱\nゲーム制作などで使えるDynamic Bone設定済みのPrefabを同梱しています。\n（※事前にDynamic Boneアセットをプロジェクト内へインポートしてください。）\n\n\nℹ 必ず利用規約に同意された上でのご購入をお願いいたします。\n渡篠処 3Dモデルデータ 利用規約\nhttps://docs.google.com/document/d/10Tg60E_4Jcglre6ruwgZoOoHBAAYuO91BECXKtc2teA/edit?usp=sharing\n\n\n - - -\n\n\nIt is an original 3D model with the concept of \"Evil spirits who enjoy the ghost life\".\nWith VRM file!\n\n☑What is obakeMove: https://twitter.com/NamaeWatashino/status/1092789099650404353\n\n\n╋─━─━─━─━─━─━─━─━─━─━─╋\n⚠ Before updating to v4.x.x ⚠\nPlease remove (or delete) the \"RyokoAky\" folder\nfrom the project before update.\n╋─━─━─━─━─━─━─━─━─━─━─╋\n\n\nPre-configured for VRChat avatars\nAvatars 3.0 compliant, Avatar Dynamics (PhysBones) is already set up and ready to use as a VRChat avatar.\n\nUses lilToon\nWe use lilToon, a popular shader with high expressive power optimized for VRChat.\n(Please import the shader into your project in advance.)\nlilToon - https://booth.pm/ja/items/3087170\n\nVRM file included\nCan be read by other VRM compatible apps such as cluster, Virtualcast, DMM Connect Chat, etc.\n\nPrefab for general Unity assets included.\nA Dynamic Bone pre-configured prefab is included for use in game production.\n(Please import Dynamic Bone assets into your project beforehand.)\n\n\nℹ Please be sure to agree to the Terms of Use before purchasing.\nThe License Agreement for Watashino Tokoro 3D Model Data\nhttps://docs.google.com/document/d/10Tg60E_4Jcglre6ruwgZoOoHBAAYuO91BECXKtc2teA/edit?usp=sharing","url":"https://booth.pm/ja/items/1111224","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2970"},"image":"https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1111224/e1a8507a-a990-4b45-b7d3-21a90ef38a94_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="r2U7r4U5C/R+oDmDL7MCKo5sDYNZj6u5/Q3o44yryg8="></script>
+    nonce="fK7wfAtLAdS3DpPCkTKaNLOen6naEahhqccg9KU5VPk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -189,7 +189,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      263
+                                      264
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -205,7 +205,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      263
+                                      264
                                     </div>
                                   </div></a>
                                 </div>
@@ -712,9 +712,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
