--- a/VRChat/29/1107229.html
+++ b/VRChat/29/1107229.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Y5opV3UlRZ2p+IR5GW67zTsQ15wlZk33xkf69YHg1Sw="></script>
+    "eLiUz4QjTb4MlQq4v3n4q8eEReFQd8FCq8Vdm7cKM8M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"キハダマグロ","description":"●説明\nキハダマグロのオリジナル3Dモデルです。\n5-60cmくらいの\"キメジ\"と呼ばれる若魚をイメージしてます。\n泳ぎます。\nVRChat用アバターまたは素材としての利用を想定してます。\n\n\n●内容\nUnityPackage（各設定済みPrefab入り）\n - Kihada-Swim : ゆったり遊泳するような\n - Kihada-SwimFast : 早く泳ぎます\n - Kihada-Vibrate : 震えます\n - Kihada-Avator : genericアバター設定済み\n　　　　　　　　　 VRC-SDKは各自インポートしてください\n - Kihada-DynamicBone : 手に持ってぶるぶる振って遊べます\n　　　　　　　　　　　　DynamicBoneは各自インポートしてください\n\n設定済みシェーダー：standard\n　　　　　　　　　　スペキュラ、ノーマル設定済み\n\n●モデルデータ\nポリゴン数：△678\n頂点：377\n辺　：729\n面　：358\n\n\n●利用条件\nご自由にどうぞ。\n改変利用、商用利用も問題ありません。\nもちろんカメラに映りこんでも何の問題もありません。\n質問あればTwitterまで（@hiramago2）\n※ BoothのDMは見ません\n\n\n●その他\n\"kawaii\"に疲れた時は、魚介。","url":"https://booth.pm/ja/items/1107229","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/40fa2a37-6d16-483f-886c-02cc32f1f440/i/1107229/8f275333-c8b2-475c-aca5-40a8da8ddaa4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Y5opV3UlRZ2p+IR5GW67zTsQ15wlZk33xkf69YHg1Sw="></script>
+    nonce="eLiUz4QjTb4MlQq4v3n4q8eEReFQd8FCq8Vdm7cKM8M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -383,9 +383,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
