--- a/VRChat/64/1098664.html
+++ b/VRChat/64/1098664.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "lpb7VW5WzCYEtPJxxNP2U0ugxbCsE9+yyV8l56DsXi0="></script>
+    "f9fE4kRFs2Txe3lV0snF0M3Ue9BIGc+mJbAMqcMmm3U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おきゅみん VR缶バッジ＆リング","description":"おきゅたんbotのファン「おきゅみん（おきゅ民）」向けのファングッズです。バーチャルなデータとしてのグッズ（FBXモデル、テクスチャ、シェーダーなど）なので、注意してね。\n\nおきゅたんやVR好き、応援してるーって方で、気に入った方は、各種ソーシャルVRなどでアバターにつけたり、飾ったりしてみてね！　アレンジしてもいいよ！\n\n・商用／非商用問わず利用可。収益化動画への映り込みも大丈夫。\n・改変可。大きさとかも自由に変えてね！\n・Unityで利用可能な形で再配布するときは、こちらの元データBOOTH URLと名前をドキュメントか何かに書いてね。\n・迷惑行為などへの利用は禁止だよ。\n\n別のデザインのおきゅみんグッズ作ったーとかあれば、ぜひ教えてね。\n\n※つけてないから応援してないっ　とかそんなことはないからね！\nいろいろアバターの世界観とかポリゴン制限もあるし！\n\n\n★使い方\n\n① OcuminGoods.unitypackageをダブルクリックするなどして、Unityのプロジェクトにインポート\n\n② OcuminGoodsの中にある、OcuminGoodsシーンを開いてグッズを確認\n\n③ アバターの付けたい場所のTransformの位置に、OcuminGoods/OcuminBadge/Prefabsの中にあるバッジのプレファブか、OcuminGoods/OcuminRingの中のOcuminRingプレファブを配置して、アバターを更新する\n\n\n★スペシャルサンクス\n\nこのファングッズは、下記のおきゅみん（というか１名原作者！）のみなさんの協力のもと、制作されました。\n\nおきゅたんイラスト：まいてぃ999さん\nhttps://twitter.com/mighty999\n\n缶バッジモデル：立川 弓月 / メロンパンさん\nhttps://twitter.com/Yuzuki_Tatikawa \n\nリング（腕輪）モデル、シェーダー：オノッチ / 鹿さん\nhttps://twitter.com/onotchi_\n\n本当にありがとー！\n\n\n★関連リンク\n\nおきゅたんbot\nhttps://twitter.com/OculusTan\n\nVRすきま動画\nhttps://www.youtube.com/c/OcutanBotVRChannel\n\nおきゅたんbot 公式\nhttps://ocutanbot.wixsite.com/ocutan\n\nまいてぃ999さん（おきゅたん / VRすきまガールズ 漫画原作者）\nhttps://twitter.com/mighty999","url":"https://booth.pm/ja/items/1098664","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/1098664/a887c301-e972-41c7-b837-cfa93a9c05b5_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lpb7VW5WzCYEtPJxxNP2U0ugxbCsE9+yyV8l56DsXi0="></script>
+    nonce="f9fE4kRFs2Txe3lV0snF0M3Ue9BIGc+mJbAMqcMmm3U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -415,9 +415,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
