--- a/VRChat/91/1101891.html
+++ b/VRChat/91/1101891.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "syqsPcIT7tuMv7MxSZaXfV5SD9uivXh+NzHqnIMZskY="></script>
+    "67xJ6k9+7ym+12UndtISsaiKDb+B18wLQoxKS+1LHo8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"誰でも簡単魔法使いセット","description":"「VRChatで魔法を撃つ魔法使いになりたいけど作るの難しそう」って人のためのそれっぽい魔法パーティクルセットです。\nこれで簡単に魔法使いになれる！\n動画こちら↓\nhttps://twitter.com/YAME_TAP/status/1065593058123644930\n\n下記の事項を守って使用してください。\n1.二次配布、販売等の禁止\n2.自作発言の禁止\n3.VRChat以外での使用の禁止\n\nこの商品には以下の物が同梱されています。\n・3つの射撃魔法(内一つ炎魔法)\n・魔法陣展開魔法\n・なんか溜めてる魔法\n\nお問合せや質問はこちらから\nTwitter:@YAME_TAP\nDiscord:YAME_TAP\n\n","url":"https://booth.pm/ja/items/1101891","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/43cf9412-f2b9-411c-9546-f23a7355aa0a/i/1101891/3b1e418b-9878-4d3f-b756-b8589bad67d2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="syqsPcIT7tuMv7MxSZaXfV5SD9uivXh+NzHqnIMZskY="></script>
+    nonce="67xJ6k9+7ym+12UndtISsaiKDb+B18wLQoxKS+1LHo8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -408,9 +408,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
