--- a/VRChat/28/1101728.html
+++ b/VRChat/28/1101728.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "48RYv+SxMLohKD+n+5jxAm/J3wExbOzQMSFKfHzCyKo="></script>
+    "U53qI71gybkbFWbMimCapvGtIQ7+mtla0576x5jFl88="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"温泉ハンドタオル【無料有】","description":"温泉やお風呂で頭に乗せるタオルです。\nVRChatでの使用を想定しています。\n△680ポリゴン\n\n - 利用方法 -\n\nunitypackageをインポートし、prefabをヒエラルキーに突っ込んでください。\nマテリアルの変更で柄の変更が行えます。\n\n\n - 利用規約 -\n\n【許可】\n・改変\n・モデルを使用しての営利活動\n・アバターペデスタルの利用\n\n【禁止】\n・再配布や販売(改変の有無を問わず)\n\n\n--------------------\n\n雨鮭\n@amesake_san","url":"https://booth.pm/ja/items/1101728","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/088f9e6d-aa90-4805-b849-17f9ee953b99/i/1101728/854d82b2-8668-4dd2-bd54-a9b736ea5946_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="48RYv+SxMLohKD+n+5jxAm/J3wExbOzQMSFKfHzCyKo="></script>
+    nonce="U53qI71gybkbFWbMimCapvGtIQ7+mtla0576x5jFl88="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -484,9 +484,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
